--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
   </head>
   <body>
     <header>
+      <div class="heading">
+        <button class="btn again">Again!</button>
+        <p class="between">(Between 1 and 20)</p>
+      </div>
       <h1>Guess My Number!</h1>
-      <p class="between">(Between 1 and 20)</p>
-      <button class="btn again">Again!</button>
       <div class="number">?</div>
     </header>
     <main>
