--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Guess My Number!</title>
 
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
     <header>
@@ -31,6 +31,6 @@
       </section>
     </main>
 
-    <script src="/script/script.js"></script>
+    <script src="/script.js"></script>
   </body>
 </html>
